@@ -1,3 +1,10 @@
+Fri Feb 20 14:14:35 2026  Jiri (George) Lebl <jiri.lebl@gmail.com>
+
+	* src/graphing.c, gtkextra/gtkplotcanvas.c: Fix plotting on scaled
+	  displays.
+	
+	* src/graphing.c: set a default file name for the export dialog.
+
 Thu Feb 19 18:11:21 2026  Jiri (George) Lebl <jiri.lebl@gmail.com>
 
 	* lib/calculus/integration.gel: Implement CompositeSimpsonsRuleData
